envoy-front-proxy/envoy-front.yaml
static_resources:
  listeners:
    - name: listener_0
      address:
        socket_address: { address: 0.0.0.0, port_value: 30600 }
      filter_chains:
        - filters:
          - name: envoy.filters.network.http_connection_manager
            typed_config:
              "@type": type.googleapis.com/envoy.config.filter.network.http_connection_manager.v2.HttpConnectionManager
              codec_type: auto
              stat_prefix: ingress_http
              route_config:
                name: ROUTE
                virtual_hosts:
                - name: SERVICE
                  domains:
                    - "*"
                  routes:
                    - match:
                        prefix: "/mobile"
                      route:
                        prefix_rewrite: "/mobile"
                        cluster: CLUSTER
              http_filters:
                - name: envoy.filters.http.router
  clusters:
    - name: CLUSTER
      connect_timeout: 1s
      type: STRICT_DNS # static
      lb_policy: RING_HASH
      load_assignment:
        cluster_name: CLUSTER
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: XXXXXX
                      port_value: XXXXXX
